Update file names

--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@
           <h6>About</h6>
         </a>
         <div class="menu-divider menu-pop"></div>
-        <a href="why-agropartnerships.html" class="menu-link w-inline-block header-menu">
-          <h6>WHY AGROPARTNERSHIPS</h6>
+        <a href="our-focus.html" class="menu-link w-inline-block header-menu">
+          <h6>Our Focus</h6>
         </a>
         <div class="menu-divider menu-pop"></div>
-        <a href="investments.html" class="menu-link w-inline-block header-menu">
-          <h6>FARMS/COMMODITIES</h6>
+        <a href="products.html" class="menu-link w-inline-block header-menu">
+          <h6>Our Products</h6>
         </a>
         <div class="menu-divider menu-pop"></div>
         <a href="faq.html" class="menu-link w-inline-block header-menu">
           <h6>FAQ</h6>
         </a>
         <div class="menu-divider menu-pop"></div>
-        <a href="help-desk.html" class="menu-link w-inline-block header-menu">
-          <h6>Help desk</h6>
+        <a href="contact.html" class="menu-link w-inline-block header-menu">
+          <h6>Contact Us</h6>
         </a>
       </div>
       <div class="menu-footer">
@@ -89,7 +89,8 @@
           <a href="tel:+2348098111113" class="menu-sub-link">0809-811-1113</a><br>
           <a href="tel:+2348098111114" class="menu-sub-link">0809-811-1114</a><br> 
           <a href="tel:+2349030000395" class="menu-sub-link">0903-000-0395</a><br>
-          <a href="cdn-cgi/l/email-protection.html#a4cdcac2cbe4c5c3d6cbd4c5d6d0cac1d6d7cccdd4d78ac7cbc99bd7d1c6cec1c7d099e1cad5d1cdd6cdc1d7819694e2d6cbc9819694f3c1c6d7cdd0c1" class="menu-sub-link"><span class="__cf_email__" data-cfemail="5d34333b321d3c3a2f322d3c2f2933382f2e35342d2e733e3230">[email&#160;protected]</span></a></p>
+          <!-- <a href="cdn-cgi/l/email-protection.html#a4cdcac2cbe4c5c3d6cbd4c5d6d0cac1d6d7cccdd4d78ac7cbc99bd7d1c6cec1c7d099e1cad5d1cdd6cdc1d7819694e2d6cbc9819694f3c1c6d7cdd0c1" class="menu-sub-link"><span class="__cf_email__" data-cfemail="5d34333b321d3c3a2f322d3c2f2933382f2e35342d2e733e3230">[email&#160;protected]</span></a> -->
+        </p>
         <p class="smallest-paragraph grey-text top-padding">© <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript">document.write(new Date().getFullYear());</script> Patrick's Foods. All Rights Reserved</p>
       </div>
     </div>
@@ -215,14 +216,14 @@ for(var i = 0; i < menuLinks.length; i++){
     <div class="faq-body">
       <div>
         <div class="faq-question" data-ix="faq-open-and-close">
-          <h5>How do I join?</h5>
+          <h5>First Question</h5>
           <div class="plus-block">
             <div class="plus-icon"></div>
             <div class="minus"></div>
           </div>
         </div>
         <div class="faq-answer" data-ix="faq-answer-on-load">
-          <p>Simply <a href="sign-up.html" target="_blank">create an account</a>, select any number of units in farms or commodity trades you are interested in, make payments and we would get you started.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos ipsam quia odit. Corporis, esse! Id iure, dolorem sequi, quos iste nam quidem error deleniti blanditiis pariatur recusandae provident laborum maxime.</p>
           <div class="close-faq">
             <div class="plus-block x">
               <div class="plus-icon"></div>
@@ -233,14 +234,14 @@ for(var i = 0; i < menuLinks.length; i++){
       </div>
       <div>
         <div class="faq-question" data-ix="faq-open-and-close">
-          <h5>What&#x27;s the duration?</h5>
+          <h5>Second Question</h5>
           <div class="plus-block">
             <div class="plus-icon"></div>
             <div class="minus"></div>
           </div>
         </div>
         <div class="faq-answer" data-ix="faq-answer-on-load">
-          <p>The program cycle is dependent on the specific farm or commodity trade type. It could range from as early as 3 weeks to 4 months for commodity trades and from 3 months to 9 months for farms.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas repellendus excepturi earum voluptatum veniam? Nostrum neque, repellat ullam laboriosam voluptates illo fugit quasi ipsam! Magni expedita aperiam necessitatibus doloribus facilis?</p>
           <div class="close-faq">
             <div class="plus-block x">
               <div class="plus-icon"></div>
@@ -251,14 +252,14 @@ for(var i = 0; i < menuLinks.length; i++){
       </div>
       <div>
         <div class="faq-question" data-ix="faq-open-and-close">
-          <h5>Minimum and maximum</h5>
+          <h5>Third Question</h5>
           <div class="plus-block">
             <div class="plus-icon"></div>
             <div class="minus"></div>
           </div>
         </div>
         <div class="faq-answer" data-ix="faq-answer-on-load">
-          <p>The minimum number of unit is one. Participants can take as many units available at any given time.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo possimus adipisci animi, eligendi reiciendis blanditiis placeat maiores neque soluta deleniti ea dolorum! Iste ipsa itaque ullam veniam eveniet dolores a!</p>
           <div class="close-faq">
             <div class="plus-block x">
               <div class="plus-icon"></div>
@@ -269,14 +270,14 @@ for(var i = 0; i < menuLinks.length; i++){
       </div>
       <div>
         <div class="faq-question" data-ix="faq-open-and-close">
-          <h5>Are farms and trades insured?</h5>
+          <h5>Fourth Question</h5>
           <div class="plus-block">
             <div class="plus-icon"></div>
             <div class="minus"></div>
           </div>
         </div>
         <div class="faq-answer" data-ix="faq-answer-on-load">
-          <p>Yes, both farms and commodities are comprehensively insured. The farms are insured to mitigate against any form of crop losses from fire, lightning, aircraft, windstorm damage, flood, outbreak of pests and diseases etc. For commodity trades, we have a comprehensive Goods in transit and warehouse insurance against burglary, fire or other unforeseen events. However, the expertise we deploy and the quality of our experience serve as a more guaranteed insurance.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste laudantium mollitia praesentium officia cum nihil, fuga quo libero autem perspiciatis totam beatae ipsum cupiditate eveniet dolore maiores. Consequuntur, nobis maiores.</p>
           <div class="close-faq">
             <div class="plus-block x">
               <div class="plus-icon"></div>
@@ -289,10 +290,8 @@ for(var i = 0; i < menuLinks.length; i++){
   <div class="footer">
   <div class="footer-top-block">
     <a href="#" class="footer-logo w-inline-block"></a>
-    <h3 class="w-hidden-tiny">No better time to
-      <br>invest in agriculture</h3>
-    <h3 class="w-hidden-main w-hidden-medium w-hidden-small">No better time to invest in agriculture</h3>
-    <a href="#" class="button orange top-padding w-button" id="footer-time-link"></a>
+    <h3 class="w-hidden-tiny">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+    <a href="products.html" class="button orange top-padding w-button">Our Products</a>
   </div>
   <div class="footer-second-inner">
     <div>
@@ -302,22 +301,19 @@ for(var i = 0; i < menuLinks.length; i++){
       <a href="about.html" class="footer-link w-inline-block">
         <h6>About</h6>
       </a>
-      <a href="investments.html" class="footer-link w-inline-block">
+      <a href="products.html" class="footer-link w-inline-block">
         <h6>Our Products</h6>
       </a>
       <a href="faq.html" class="footer-link w-inline-block">
         <h6>FAQ</h6>
       </a>
-      <a href="help-desk.html" class="footer-link w-inline-block">
-        <h6>Help desk</h6>
-      </a>
-      <a href="legal.html" class="footer-link w-inline-block">
-        <h6>Legal</h6>
+      <a href="contact.html" class="footer-link w-inline-block">
+        <h6>Contact Us</h6>
       </a>
     </div>
     <div class="footer-right-align">
       <h6 class="lemon-green-text">Powered by</h6>
-      <a href="http://farmforte.com/" target="_blank" class="farmforte-logo w-inline-block"></a>
+      <a href="https://patricksfoods.com/" target="_blank" class="farmforte-logo w-inline-block"></a>
     </div>
   </div>
   <a href="http://check-dc.com/" target="_blank" class="check-logo w-inline-block" title="Check DC : A Lagos based design agency focused on Brand Identity, Website design and Digital Marketing.">
@@ -329,22 +325,7 @@ for(var i = 0; i < menuLinks.length; i++){
     </div>
   </div>
 </div>
-<script>
-  var footerTimeLink = document.getElementById("footer-time-link");
-  if (authBot.getToken()) {
-    footerTimeLink.href = 'investments.html';
-    footerTimeLink.textContent = "View Opportunities";
 
-    var hideNodes = document.getElementsByClassName('signed-in-hide');
-    for (var i = 0; i < hideNodes.length; i++) {
-      hideNodes[i].style.display = 'none';
-    }
-  }
-  else {
-    footerTimeLink.href = 'sign-up.html';
-    footerTimeLink.textContent = "Start now";
-  }
-</script>
 
   <script>
       // Configure the globally defined Vue instance.
