--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
   <meta charset="utf-8">
-  <title>About Agropartnerships | A Digital Platform for Agribusiness</title>
-  <meta content="An innovative digital platform that gives everyone the opportunity to engage in Agribusiness anytime and on the go, by funding farms and facilitating trades of agricultural commodities." name="description">
-  <meta content="About Agropartnerships | A Digital Platform for Agribusiness" property="og:title">
-  <meta content="An innovative digital platform that gives everyone the opportunity to engage in Agribusiness anytime and on the go, by funding farms and facilitating trades of agricultural commodities." property="og:description">
+  <title>Patrick's Foods | The Healthy Food Stack</title>
+  <meta content="" name="description">
+  <meta content="" property="og:title">
+  <meta content="" property="og:description">
   <meta content="summary" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
@@ -59,44 +59,45 @@
       </div>
     </div>
     <div class="menu">
-      <div class="menu-content">
-        <div class="menu-close" data-ix="close-menu"></div>
-        <div>
-          <a href="index.html" class="menu-link w-inline-block header-menu" data-page="index">
-            <h6>Home</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="about.html" class="menu-link w-inline-block header-menu">
-            <h6>About</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="why-agropartnerships.html" class="menu-link w-inline-block header-menu">
-            <h6>WHY AGROPARTNERSHIPS</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="investments.html" class="menu-link w-inline-block header-menu">
-            <h6>FARMS/COMMODITIES</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="faq.html" class="menu-link w-inline-block header-menu">
-            <h6>FAQ</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="help-desk.html" class="menu-link w-inline-block header-menu">
-            <h6>Help desk</h6>
-          </a>
+        <div class="menu-content">
+          <div class="menu-close" data-ix="close-menu"></div>
+          <div>
+            <a href="index.html" class="menu-link w-inline-block header-menu" data-page="index">
+              <h6>Home</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="about.html" class="menu-link w-inline-block header-menu">
+              <h6>About</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="our-focus.html" class="menu-link w-inline-block header-menu">
+              <h6>Our Focus</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="products.html" class="menu-link w-inline-block header-menu">
+              <h6>Our Products</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="faq.html" class="menu-link w-inline-block header-menu">
+              <h6>FAQ</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="contact.html" class="menu-link w-inline-block header-menu">
+              <h6>Contact Us</h6>
+            </a>
+          </div>
+          <div class="menu-footer">
+            <p class="smallest-paragraph grey-text">
+              <a href="tel:+2348098111113" class="menu-sub-link">0809-811-1113</a><br>
+              <a href="tel:+2348098111114" class="menu-sub-link">0809-811-1114</a><br> 
+              <a href="tel:+2349030000395" class="menu-sub-link">0903-000-0395</a><br>
+              <!-- <a href="cdn-cgi/l/email-protection.html#a4cdcac2cbe4c5c3d6cbd4c5d6d0cac1d6d7cccdd4d78ac7cbc99bd7d1c6cec1c7d099e1cad5d1cdd6cdc1d7819694e2d6cbc9819694f3c1c6d7cdd0c1" class="menu-sub-link"><span class="__cf_email__" data-cfemail="5d34333b321d3c3a2f322d3c2f2933382f2e35342d2e733e3230">[email&#160;protected]</span></a> -->
+            </p>
+            <p class="smallest-paragraph grey-text top-padding">© <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript">document.write(new Date().getFullYear());</script> Patrick's Foods. All Rights Reserved</p>
+          </div>
         </div>
-        <div class="menu-footer">
-          <p class="smallest-paragraph grey-text">
-            <a href="tel:+2348098111113" class="menu-sub-link">0809-811-1113</a><br>
-            <a href="tel:+2348098111114" class="menu-sub-link">0809-811-1114</a><br> 
-            <a href="tel:+2349030000395" class="menu-sub-link">0903-000-0395</a><br>
-            <a href="cdn-cgi/l/email-protection.html#a4cdcac2cbe4c5c3d6cbd4c5d6d0cac1d6d7cccdd4d78ac7cbc99bd7d1c6cec1c7d099e1cad5d1cdd6cdc1d7819694e2d6cbc9819694f3c1c6d7cdd0c1" class="menu-sub-link"><span class="__cf_email__" data-cfemail="5d34333b321d3c3a2f322d3c2f2933382f2e35342d2e733e3230">[email&#160;protected]</span></a></p>
-          <p class="smallest-paragraph grey-text top-padding">© <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript">document.write(new Date().getFullYear());</script> Farmforte. All Rights Reserved</p>
-        </div>
+        <div class="menu-lightbox" data-ix="close-menu"></div>
       </div>
-      <div class="menu-lightbox" data-ix="close-menu"></div>
-    </div>
     <div class="header-flex">
       <div class="menu-button" data-ix="open-menu">
         <div class="menu-line"></div>
@@ -295,8 +296,8 @@
       </a>
     </div>
     <div class="footer-right-align">
-      <h6 class="lemon-green-text">Powered by</h6>
-      <a href="http://farmforte.com/" target="_blank" class="farmforte-logo w-inline-block"></a>
+        <h6 class="lemon-green-text">Powered by</h6>
+        <a href="https://patricksfoods.com/" target="_blank" class="farmforte-logo w-inline-block"></a>
     </div>
   </div>
   <a href="http://check-dc.com/" target="_blank" class="check-logo w-inline-block" title="Check DC : A Lagos based design agency focused on Brand Identity, Website design and Digital Marketing.">
@@ -304,7 +305,7 @@
   <div>
     <div class="white-text _50 copyright-text">
       <div class="w-embed w-script">© Copyright
-        <script type="text/javascript">document.write(new Date().getFullYear());</script> Agropartnerships Technology Ltd. A Farmforte Subsidiary.</div>
+        <script type="text/javascript">document.write(new Date().getFullYear());</script> Patrick's Food Ltd.</div>
     </div>
   </div>
 </div>
