--- a/about.html
+++ b/about.html
@@ -119,19 +119,19 @@
 
   <div class="hero about" data-ix="sticky-header">
     <div class="curl lemon-green"></div>
-    <h1 class="white-text">Agriculture</h1>
-    <h3 class="white-text">for everyone</h3>
+    <h1 class="white-text">Sea Foods</h1>
+    <h3 class="white-text">Beyond Healthy Value</h3>
     <div class="about-hero-inner-block">
-      <p class="small-paragraph">A simple, risk free and profitable program perfect for people looking to engage in Agriculture but don&#x27;t have the knowledge, capacity or time to execute their agriculture desires. We provide all the tools and handle all management necessary for a successful farming operation.</p>
+      <p class="small-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cumque earum culpa, totam impedit tempora asperiores consequuntur repellat hic facere minima ratione! Aliquid error minima, pariatur eligendi unde esse iusto?</p>
     </div>
   </div>
   <div class="about-body-block">
     <div class="tropical-plant"></div>
     <div class="about-intro-text">
-      <h4>Agropartnerships Technology Ltd, a registered subsidiary of Farmforte™, is an innovative digital platform  that gives everyone the opportunity to engage in Agribusiness anytime and on the go by funding farms and facilitating trades of agricultural commodities.</h4>
+      <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor atque hic nisi maiores autem sit quibusdam tenetur similique, temporibus voluptas quam aliquid pariatur beatae necessitatibus reprehenderit, quod molestias, nemo vel.</h4>
     </div>
     <div>
-      <h1 class="white-text">About Farmforte</h1>
+      <h1 class="white-text">About Patrick's Foods</h1>
       <div data-duration-in="300" data-duration-out="100" class="w-tabs">
         <div class="about-tab-menu w-tab-menu">
           <a data-w-tab="Overview" class="about-tab-link w-inline-block w-tab-link w--current">
@@ -147,116 +147,32 @@
         <div class="w-tab-content">
           <div data-w-tab="Overview" class="w-tab-pane w--tab-active">
             <div class="about-tab-content">
-              <div class="about-content-heading">
-                <h5>Farmforte is an impact oriented company founded in 2012. We are focused on creating innovative solutions to existing problems in the african agricultural landscape and transforming them to economic opportunities.</h5>
+              <div class="about-content-paragraph">
+                <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde praesentium sit minus vitae placeat animi quae voluptatibus ipsa amet facere iusto quia pariatur consequuntur, fuga molestiae deserunt blanditiis. Voluptatum, accusantium!</h5>
               </div>
               <div class="about-content-paragraph">
-                <p>We play across the value chain of specific agricultural crops. We engage in modern farming using advanced technological methods. We also engage in the use of modern machinery to process raw materials into value added products. And importantly, we create access to global markets for our local produce.</p>
-              </div><a href="http://farmforte.com/" target="_blank" class="button about-tab w-button">Visit website</a></div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum error voluptatum eveniet culpa adipisci sequi nisi, enim sunt accusantium nulla perspiciatis, alias repellat, autem architecto magni? Voluptate quae quibusdam quidem?</p>
+              </div>
+            </div>
           </div>
           <div data-w-tab="Beliefs" class="w-tab-pane">
             <div class="about-tab-content">
-              <div class="about-content-heading">
-                <h5>At Farmforte, we believe that Africa’s greatest opportunity to play on the global scene lies in its Agricultural potentials. We can create solutions that would change the way the world feeds itself.</h5>
+              <div class="about-content-paragraph">
+                <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, corporis architecto? Nemo optio laborum quidem fugit blanditiis obcaecati aliquid quibusdam, molestiae in numquam maxime nihil eveniet rem, at ducimus id?</h5>
               </div>
-              <div class="about-content-icon agriculture"></div><a href="http://farmforte.com/" target="_blank" class="button about-tab w-button">Visit website</a></div>
+              <div class="about-content-paragraph">
+                  <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, corporis architecto? Nemo optio laborum quidem fugit blanditiis obcaecati aliquid quibusdam, molestiae in numquam maxime nihil eveniet rem, at ducimus id?</h5>
+                </div>
+            </div>
           </div>
           <div data-w-tab="Activities" class="w-tab-pane">
             <div class="about-tab-content">
-              <div class="gallery-wrapper">
-                <div class="gallery-flex"><a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/dot.svg" width="1"><script type="application/json" class="w-json">{
-  "items": [
-    {
-      "width": 500,
-      "caption": "Sweet Potato Harvest",
-      "height": 300,
-      "fileName": "5aec79092c95ed7fa142528f_sweet+potato+harvest.jpg",
-      "origFileName": "sweet+potato+harvest.jpg",
-      "url": "images/sweetpotatoharvest.jpg",
-      "_id": "5aec79092c95ed7fa142528f",
-      "type": "image",
-      "fileSize": 54721
-    }
-  ],
-  "group": "Activities"
-}</script></a><a href="#" class="lightbox-link _2 w-inline-block w-lightbox"><img src="images/dot.svg" width="1"><script type="application/json" class="w-json">{
-  "items": [
-    {
-      "width": 240,
-      "caption": "Sweet Potato Wedges",
-      "height": 180,
-      "fileName": "5aec790a1f34a2e441c9a89a_sweet+potato+wedges.jpg",
-      "origFileName": "sweet+potato+wedges.jpg",
-      "url": "images/sweetpotatowedges.jpg",
-      "_id": "5aec790a1f34a2e441c9a89a",
-      "type": "image",
-      "fileSize": 14115
-    }
-  ],
-  "group": "Activities"
-}</script></a><a href="#" class="lightbox-link _3 w-inline-block w-lightbox"><img src="images/dot.svg" width="1"><script type="application/json" class="w-json">{
-  "items": [
-    {
-      "width": 500,
-      "caption": "Sweet Potato GRID PI",
-      "height": 345,
-      "fileName": "5aec79063300c3172e6b7d76_Sweet-PotatoGRID+PI.jpeg",
-      "origFileName": "Sweet-PotatoGRID+PI.jpeg",
-      "url": "images/Sweet-PotatoGRIDPI.jpeg",
-      "_id": "5aec79063300c3172e6b7d76",
-      "type": "image",
-      "fileSize": 60284
-    }
-  ],
-  "group": "Activities"
-}</script></a></div>
-                <div class="gallery-flex"><a href="#" class="lightbox-link _4 w-inline-block w-lightbox"><img src="images/dot.svg" width="1"><script type="application/json" class="w-json">{
-  "items": [
-    {
-      "width": 300,
-      "caption": "Export Sweet Potato",
-      "height": 239,
-      "fileName": "5aec7906d0dbd4c12250a2bd_export+sweet+potato.jpg",
-      "origFileName": "export+sweet+potato.jpg",
-      "url": "images/exportsweetpotato.jpg",
-      "_id": "5aec7906d0dbd4c12250a2bd",
-      "type": "image",
-      "fileSize": 28567
-    }
-  ],
-  "group": "Activities"
-}</script></a><a href="#" class="lightbox-link _5 w-inline-block w-lightbox"><img src="images/dot.svg" width="1"><script type="application/json" class="w-json">{
-  "items": [
-    {
-      "width": 500,
-      "caption": "Sweet Potato Workers",
-      "height": 281,
-      "fileName": "5aec79062c95edf74d42528e_sweet-potato-workers.png",
-      "origFileName": "sweet-potato-workers.png",
-      "url": "images/sweet-potato-workers.png",
-      "_id": "5aec79062c95edf74d42528e",
-      "type": "image",
-      "fileSize": 308890
-    }
-  ],
-  "group": "Activities"
-}</script></a><a href="#" class="lightbox-link _6 w-inline-block w-lightbox"><img src="images/dot.svg" width="1"><script type="application/json" class="w-json">{
-  "items": [
-    {
-      "width": 572,
-      "caption": "Farmforte at Fruit Logistica",
-      "height": 429,
-      "fileName": "5aec7906c6d254ecd782a890_Farmforte-at-Fruit-Logistica-2018-1.jpg",
-      "origFileName": "Farmforte-at-Fruit-Logistica-2018-1.jpg",
-      "url": "images/Farmforte-at-Fruit-Logistica-2018-1.jpg",
-      "_id": "5aec7906c6d254ecd782a890",
-      "type": "image",
-      "fileSize": 26450
-    }
-  ],
-  "group": "Activities"
-}</script></a></div>
+              <div class="about-content-paragraph">
+                <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas accusantium est quaerat a delectus omnis quae dolore perspiciatis nihil, non laborum natus quo molestiae architecto optio eius eaque asperiores recusandae.</h5>
               </div>
+              <div class="about-content-paragraph">
+                  <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, corporis architecto? Nemo optio laborum quidem fugit blanditiis obcaecati aliquid quibusdam, molestiae in numquam maxime nihil eveniet rem, at ducimus id?</h5>
+                </div>
             </div>
           </div>
         </div>
