about - Footer top block

--- a/about.html
+++ b/about.html
@@ -180,13 +180,11 @@
     </div>
   </div>
   <div class="footer">
-  <div class="footer-top-block">
-    <a href="#" class="footer-logo w-inline-block"></a>
-    <h3 class="w-hidden-tiny">No better time to
-      <br>invest in agriculture</h3>
-    <h3 class="w-hidden-main w-hidden-medium w-hidden-small">No better time to invest in agriculture</h3>
-    <a href="#" class="button orange top-padding w-button" id="footer-time-link"></a>
-  </div>
+      <div class="footer-top-block">
+          <a href="#" class="footer-logo w-inline-block"></a>
+          <h3 class="w-hidden-tiny">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+          <a href="products.html" class="button orange top-padding w-button">Our Products</a>
+        </div>
   <div class="footer-second-inner">
     <div>
       <a href="index.html" class="footer-link w-inline-block w--current">
