--- a/about.html
+++ b/about.html
@@ -3,7 +3,9 @@
 <html data-wf-page="5aedbb739cabc38c65a49c08" data-wf-site="5aec5659e4867c546a4da688">
 
 <!-- Mirrored from agropartnerships.co/about by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 30 Jul 2019 11:08:27 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+
 <head>
   <meta charset="utf-8">
   <title>Patrick's Foods | The Healthy Food Stack</title>
@@ -16,39 +18,52 @@
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script type="text/javascript">
+    ! function (o, c) {
+      var n = c.documentElement,
+        t = " w-mod-";
+      n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className +=
+        t + "touch")
+    }(window, document);
+  </script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <style>
-    ::-moz-selection { /* Firefox */
-        color: #1d3b2d;
-        background: #8dc63f;
+    ::-moz-selection {
+      /* Firefox */
+      color: #1d3b2d;
+      background: #8dc63f;
     }
+
     ::selection {
-        color: #1d3b2d;
-        background: #8dc63f;
+      color: #1d3b2d;
+      background: #8dc63f;
     }
-</style>
+  </style>
 
 
-<script>
-	// Vue Mixin List
-	var mixinList = [];
-</script>
+  <script>
+    // Vue Mixin List
+    var mixinList = [];
+  </script>
 </head>
+
 <body>
   <script src="js/utilities.js"></script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130165432-"></script>
-<script>
- window.dataLayer = window.dataLayer || [];
- function gtag(){dataLayer.push(arguments);}
- gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130165432-"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
- gtag('config', 'UA-130165432-');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-<div class="header" id="header" style="display: none">
+    gtag('config', 'UA-130165432-');
+  </script>
+
+  <div class="header" id="header" style="display: none">
     <div class="header-on-scroll">
       <div class="header-flex">
         <div class="menu-button" data-ix="open-menu">
@@ -59,45 +74,50 @@
       </div>
     </div>
     <div class="menu">
-        <div class="menu-content">
-          <div class="menu-close" data-ix="close-menu"></div>
-          <div>
-            <a href="index.html" class="menu-link w-inline-block header-menu" data-page="index">
-              <h6>Home</h6>
-            </a>
-            <div class="menu-divider menu-pop"></div>
-            <a href="about.html" class="menu-link w-inline-block header-menu">
-              <h6>About</h6>
-            </a>
-            <div class="menu-divider menu-pop"></div>
-            <a href="our-focus.html" class="menu-link w-inline-block header-menu">
-              <h6>Our Focus</h6>
-            </a>
-            <div class="menu-divider menu-pop"></div>
-            <a href="products.html" class="menu-link w-inline-block header-menu">
-              <h6>Our Products</h6>
-            </a>
-            <div class="menu-divider menu-pop"></div>
-            <a href="faq.html" class="menu-link w-inline-block header-menu">
-              <h6>FAQ</h6>
-            </a>
-            <div class="menu-divider menu-pop"></div>
-            <a href="contact.html" class="menu-link w-inline-block header-menu">
-              <h6>Contact Us</h6>
-            </a>
-          </div>
-          <div class="menu-footer">
-            <p class="smallest-paragraph grey-text">
-              <a href="tel:+2348098111113" class="menu-sub-link">0809-811-1113</a><br>
-              <a href="tel:+2348098111114" class="menu-sub-link">0809-811-1114</a><br> 
-              <a href="tel:+2349030000395" class="menu-sub-link">0903-000-0395</a><br>
-              <!-- <a href="cdn-cgi/l/email-protection.html#a4cdcac2cbe4c5c3d6cbd4c5d6d0cac1d6d7cccdd4d78ac7cbc99bd7d1c6cec1c7d099e1cad5d1cdd6cdc1d7819694e2d6cbc9819694f3c1c6d7cdd0c1" class="menu-sub-link"><span class="__cf_email__" data-cfemail="5d34333b321d3c3a2f322d3c2f2933382f2e35342d2e733e3230">[email&#160;protected]</span></a> -->
-            </p>
-            <p class="smallest-paragraph grey-text top-padding">© <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript">document.write(new Date().getFullYear());</script> Patrick's Foods. All Rights Reserved</p>
-          </div>
+      <div class="menu-content">
+        <div class="menu-close" data-ix="close-menu"></div>
+        <div>
+          <a href="index.html" class="menu-link w-inline-block header-menu" data-page="index">
+            <h6>Home</h6>
+          </a>
+          <div class="menu-divider menu-pop"></div>
+          <a href="about.html" class="menu-link w-inline-block header-menu">
+            <h6>About</h6>
+          </a>
+          <div class="menu-divider menu-pop"></div>
+          <a href="our-focus.html" class="menu-link w-inline-block header-menu">
+            <h6>Our Focus</h6>
+          </a>
+          <div class="menu-divider menu-pop"></div>
+          <a href="products.html" class="menu-link w-inline-block header-menu">
+            <h6>Our Products</h6>
+          </a>
+          <div class="menu-divider menu-pop"></div>
+          <a href="faq.html" class="menu-link w-inline-block header-menu">
+            <h6>FAQ</h6>
+          </a>
+          <div class="menu-divider menu-pop"></div>
+          <a href="contact.html" class="menu-link w-inline-block header-menu">
+            <h6>Contact Us</h6>
+          </a>
         </div>
-        <div class="menu-lightbox" data-ix="close-menu"></div>
+        <div class="menu-footer">
+          <p class="smallest-paragraph grey-text">
+            <a href="tel:+2348098111113" class="menu-sub-link">0809-811-1113</a><br>
+            <a href="tel:+2348098111114" class="menu-sub-link">0809-811-1114</a><br>
+            <a href="tel:+2349030000395" class="menu-sub-link">0903-000-0395</a><br>
+            <!-- <a href="cdn-cgi/l/email-protection.html#a4cdcac2cbe4c5c3d6cbd4c5d6d0cac1d6d7cccdd4d78ac7cbc99bd7d1c6cec1c7d099e1cad5d1cdd6cdc1d7819694e2d6cbc9819694f3c1c6d7cdd0c1" class="menu-sub-link"><span class="__cf_email__" data-cfemail="5d34333b321d3c3a2f322d3c2f2933382f2e35342d2e733e3230">[email&#160;protected]</span></a> -->
+          </p>
+          <p class="smallest-paragraph grey-text top-padding">© <script data-cfasync="false"
+              src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script> Patrick's Foods. All Rights Reserved
+          </p>
+        </div>
       </div>
+      <div class="menu-lightbox" data-ix="close-menu"></div>
+    </div>
     <div class="header-flex">
       <div class="menu-button" data-ix="open-menu">
         <div class="menu-line"></div>
@@ -106,15 +126,16 @@
       </div><a href="index.html" class="home-logo w-inline-block header-menu"></a>
     </div>
   </div>
-  
+
   <script>
-  document.getElementById('header').style.display = 'flex';
-  var menuLinks = document.getElementsByClassName('header-menu');
-  for(var i = 0; i < menuLinks.length; i++){
-    if((menuLinks[i].getAttribute('href') == window.location.pathname) || (menuLinks[i].getAttribute('href') == "/index" && window.location.pathname == "index.html")){
-      menuLinks[i].classList.add('w--current');
+    document.getElementById('header').style.display = 'flex';
+    var menuLinks = document.getElementsByClassName('header-menu');
+    for (var i = 0; i < menuLinks.length; i++) {
+      if ((menuLinks[i].getAttribute('href') == window.location.pathname) || (menuLinks[i].getAttribute('href') ==
+          "/index" && window.location.pathname == "index.html")) {
+        menuLinks[i].classList.add('w--current');
+      }
     }
-  }
   </script>
 
   <div class="hero about" data-ix="sticky-header">
@@ -122,13 +143,17 @@
     <h1 class="white-text">Sea Foods</h1>
     <h3 class="white-text">Beyond Healthy Value</h3>
     <div class="about-hero-inner-block">
-      <p class="small-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cumque earum culpa, totam impedit tempora asperiores consequuntur repellat hic facere minima ratione! Aliquid error minima, pariatur eligendi unde esse iusto?</p>
+      <p class="small-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cumque earum culpa,
+        totam impedit tempora asperiores consequuntur repellat hic facere minima ratione! Aliquid error minima, pariatur
+        eligendi unde esse iusto?</p>
     </div>
   </div>
   <div class="about-body-block">
     <div class="tropical-plant"></div>
     <div class="about-intro-text">
-      <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor atque hic nisi maiores autem sit quibusdam tenetur similique, temporibus voluptas quam aliquid pariatur beatae necessitatibus reprehenderit, quod molestias, nemo vel.</h4>
+      <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor atque hic nisi maiores autem sit quibusdam
+        tenetur similique, temporibus voluptas quam aliquid pariatur beatae necessitatibus reprehenderit, quod
+        molestias, nemo vel.</h4>
     </div>
     <div>
       <h1 class="white-text">About Patrick's Foods</h1>
@@ -148,31 +173,43 @@
           <div data-w-tab="Overview" class="w-tab-pane w--tab-active">
             <div class="about-tab-content">
               <div class="about-content-paragraph">
-                <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde praesentium sit minus vitae placeat animi quae voluptatibus ipsa amet facere iusto quia pariatur consequuntur, fuga molestiae deserunt blanditiis. Voluptatum, accusantium!</h5>
+                <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde praesentium sit minus vitae placeat
+                  animi quae voluptatibus ipsa amet facere iusto quia pariatur consequuntur, fuga molestiae deserunt
+                  blanditiis. Voluptatum, accusantium!</h5>
               </div>
               <div class="about-content-paragraph">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum error voluptatum eveniet culpa adipisci sequi nisi, enim sunt accusantium nulla perspiciatis, alias repellat, autem architecto magni? Voluptate quae quibusdam quidem?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum error voluptatum eveniet culpa
+                  adipisci sequi nisi, enim sunt accusantium nulla perspiciatis, alias repellat, autem architecto magni?
+                  Voluptate quae quibusdam quidem?</p>
               </div>
             </div>
           </div>
           <div data-w-tab="Beliefs" class="w-tab-pane">
             <div class="about-tab-content">
               <div class="about-content-paragraph">
-                <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, corporis architecto? Nemo optio laborum quidem fugit blanditiis obcaecati aliquid quibusdam, molestiae in numquam maxime nihil eveniet rem, at ducimus id?</h5>
+                <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, corporis architecto? Nemo optio
+                  laborum quidem fugit blanditiis obcaecati aliquid quibusdam, molestiae in numquam maxime nihil eveniet
+                  rem, at ducimus id?</h5>
               </div>
               <div class="about-content-paragraph">
-                  <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, corporis architecto? Nemo optio laborum quidem fugit blanditiis obcaecati aliquid quibusdam, molestiae in numquam maxime nihil eveniet rem, at ducimus id?</h5>
-                </div>
+                <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, corporis architecto? Nemo optio
+                  laborum quidem fugit blanditiis obcaecati aliquid quibusdam, molestiae in numquam maxime nihil eveniet
+                  rem, at ducimus id?</h5>
+              </div>
             </div>
           </div>
           <div data-w-tab="Activities" class="w-tab-pane">
             <div class="about-tab-content">
               <div class="about-content-paragraph">
-                <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas accusantium est quaerat a delectus omnis quae dolore perspiciatis nihil, non laborum natus quo molestiae architecto optio eius eaque asperiores recusandae.</h5>
+                <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas accusantium est quaerat a delectus
+                  omnis quae dolore perspiciatis nihil, non laborum natus quo molestiae architecto optio eius eaque
+                  asperiores recusandae.</h5>
               </div>
               <div class="about-content-paragraph">
-                  <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, corporis architecto? Nemo optio laborum quidem fugit blanditiis obcaecati aliquid quibusdam, molestiae in numquam maxime nihil eveniet rem, at ducimus id?</h5>
-                </div>
+                <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, corporis architecto? Nemo optio
+                  laborum quidem fugit blanditiis obcaecati aliquid quibusdam, molestiae in numquam maxime nihil eveniet
+                  rem, at ducimus id?</h5>
+              </div>
             </div>
           </div>
         </div>
@@ -180,65 +217,61 @@
     </div>
   </div>
   <div class="footer">
-      <div class="footer-top-block">
-          <a href="#" class="footer-logo w-inline-block"></a>
-          <h3 class="w-hidden-tiny">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-          <a href="products.html" class="button orange top-padding w-button">Our Products</a>
-        </div>
-  <div class="footer-second-inner">
-    <div>
-      <a href="index.html" class="footer-link w-inline-block w--current">
-        <h6>Home</h6>
-      </a>
-      <a href="about.html" class="footer-link w-inline-block">
-        <h6>About</h6>
-      </a>
-      <a href="why-agropartnerships.html" class="footer-link w-inline-block">
-        <h6>WHY AGROPARTNERSHIPS</h6>
-      </a>
-      <a href="investments.html" class="footer-link w-inline-block">
-        <h6>FARMS/COMMODITIES</h6>
-      </a>
-      <a href="faq.html" class="footer-link w-inline-block">
-        <h6>FAQ</h6>
-      </a>
-      <a href="help-desk.html" class="footer-link w-inline-block">
-        <h6>Help desk</h6>
-      </a>
-      <a href="legal.html" class="footer-link w-inline-block">
-        <h6>Legal</h6>
-      </a>
+    <div class="footer-top-block">
+      <a href="#" class="footer-logo w-inline-block"></a>
+      <h3 class="w-hidden-tiny">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+      <a href="products.html" class="button orange top-padding w-button">Our Products</a>
     </div>
-    <div class="footer-right-align">
+    <div class="footer-second-inner">
+      <div>
+        <a href="index.html" class="footer-link w-inline-block w--current">
+          <h6>Home</h6>
+        </a>
+        <a href="about.html" class="footer-link w-inline-block">
+          <h6>About</h6>
+        </a>
+        <a href="products.html" class="footer-link w-inline-block">
+          <h6>Our Products</h6>
+        </a>
+        <a href="faq.html" class="footer-link w-inline-block">
+          <h6>FAQ</h6>
+        </a>
+        <a href="contact.html" class="footer-link w-inline-block">
+          <h6>Contact Us</h6>
+        </a>
+      </div>
+      <div class="footer-right-align">
         <h6 class="lemon-green-text">Powered by</h6>
         <a href="https://patricksfoods.com/" target="_blank" class="farmforte-logo w-inline-block"></a>
+      </div>
+    </div>
+    <a href="http://check-dc.com/" target="_blank" class="check-logo w-inline-block"
+      title="Check DC : A Lagos based design agency focused on Brand Identity, Website design and Digital Marketing.">
+    </a>
+    <div>
+      <div class="white-text _50 copyright-text">
+        <div class="w-embed w-script">© Copyright
+          <script type="text/javascript">
+            document.write(new Date().getFullYear());
+          </script> Patrick's Food Ltd.</div>
+      </div>
     </div>
   </div>
-  <a href="http://check-dc.com/" target="_blank" class="check-logo w-inline-block" title="Check DC : A Lagos based design agency focused on Brand Identity, Website design and Digital Marketing.">
-  </a>
-  <div>
-    <div class="white-text _50 copyright-text">
-      <div class="w-embed w-script">© Copyright
-        <script type="text/javascript">document.write(new Date().getFullYear());</script> Patrick's Food Ltd.</div>
-    </div>
-  </div>
-</div>
-<script>
-  var footerTimeLink = document.getElementById("footer-time-link");
-  if (authBot.getToken()) {
-    footerTimeLink.href = 'investments.html';
-    footerTimeLink.textContent = "View Opportunities";
+  <script>
+    var footerTimeLink = document.getElementById("footer-time-link");
+    if (authBot.getToken()) {
+      footerTimeLink.href = 'investments.html';
+      footerTimeLink.textContent = "View Opportunities";
 
-    var hideNodes = document.getElementsByClassName('signed-in-hide');
-    for (var i = 0; i < hideNodes.length; i++) {
-      hideNodes[i].style.display = 'none';
+      var hideNodes = document.getElementsByClassName('signed-in-hide');
+      for (var i = 0; i < hideNodes.length; i++) {
+        hideNodes[i].style.display = 'none';
+      }
+    } else {
+      footerTimeLink.href = 'sign-up.html';
+      footerTimeLink.textContent = "Start now";
     }
-  }
-  else {
-    footerTimeLink.href = 'sign-up.html';
-    footerTimeLink.textContent = "Start now";
-  }
-</script>
+  </script>
 
   <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
   <script src="js/style.js" type="text/javascript"></script>
@@ -246,4 +279,5 @@
 </body>
 
 <!-- Mirrored from agropartnerships.co/about by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 30 Jul 2019 11:08:27 GMT -->
+
 </html>
