--- a/about.html
+++ b/about.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Jun 07 2018 03:16:34 GMT+0000 (UTC)  -->
 <html data-wf-page="5aedbb739cabc38c65a49c08" data-wf-site="5aec5659e4867c546a4da688">
-
-<!-- Mirrored from agropartnerships.co/about by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 30 Jul 2019 11:08:27 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
   <meta charset="utf-8">
@@ -257,27 +253,9 @@
       </div>
     </div>
   </div>
-  <script>
-    var footerTimeLink = document.getElementById("footer-time-link");
-    if (authBot.getToken()) {
-      footerTimeLink.href = 'investments.html';
-      footerTimeLink.textContent = "View Opportunities";
-
-      var hideNodes = document.getElementsByClassName('signed-in-hide');
-      for (var i = 0; i < hideNodes.length; i++) {
-        hideNodes[i].style.display = 'none';
-      }
-    } else {
-      footerTimeLink.href = 'sign-up.html';
-      footerTimeLink.textContent = "Start now";
-    }
-  </script>
-
+  
   <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
   <script src="js/style.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
-
-<!-- Mirrored from agropartnerships.co/about by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 30 Jul 2019 11:08:27 GMT -->
-
 </html>
