--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
   <meta charset="utf-8">
-  <title>Help Desk | Agropartnerships | A Digital Platform for Agribusiness</title>
-  <meta content="Plot 8, Rock Drive, CBD, Lekki Phase 1, Lagos Nigeria. Monday – Friday: 9AM – 5PM | 0903-000-0395 | 0809-811-1115 | 0809-811-1117 | 0809-811-1113 | 0809-811-1114 | info@agropartnerships.com" name="description">
-  <meta content="Help Desk | Agropartnerships | A Digital Platform for Agribusiness" property="og:title">
-  <meta content="Plot 8, Rock Drive, CBD, Lekki Phase 1, Lagos Nigeria. Monday – Friday: 9AM – 5PM | 0903-000-0395 | 0809-811-1115 | 0809-811-1117 | 0809-811-1113 | 0809-811-1114 | info@agropartnerships.com" property="og:description">
+  <title>Contact Us | Patrick's Foods - The Healthy Food Stack</title>
+  <meta content="Plot 2, Lint Drive, Uyo, Nigeria. Monday – Friday: 9AM – 5PM | 0903-000-0000 | 0809-000-0000 | 0802-000-0000 | 0801-000-0000 | 0803-000-0000 | info@patrickfoods.com" name="description">
+  <meta content="Contact Us | Patrick's Foods - The Healthy Food Stack" property="og:title">
+  <meta content="Plot 2, Lint Drive, Uyo, Nigeria. Monday – Friday: 9AM – 5PM | 0903-000-0000 | 0809-000-0000 | 0802-000-0000 | 0801-000-0000 | 0803-000-0000 | info@patrickfoods.com" property="og:description">
   <meta content="summary" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
