--- a/contact.html
+++ b/contact.html
@@ -59,44 +59,50 @@
       </div>
     </div>
     <div class="menu">
-      <div class="menu-content">
-        <div class="menu-close" data-ix="close-menu"></div>
-        <div>
-          <a href="index.html" class="menu-link w-inline-block header-menu" data-page="index">
-            <h6>Home</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="about.html" class="menu-link w-inline-block header-menu">
-            <h6>About</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="why-agropartnerships.html" class="menu-link w-inline-block header-menu">
-            <h6>WHY AGROPARTNERSHIPS</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="investments.html" class="menu-link w-inline-block header-menu">
-            <h6>FARMS/COMMODITIES</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="faq.html" class="menu-link w-inline-block header-menu">
-            <h6>FAQ</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="help-desk.html" class="menu-link w-inline-block header-menu">
-            <h6>Help desk</h6>
-          </a>
+        <div class="menu-content">
+          <div class="menu-close" data-ix="close-menu"></div>
+          <div>
+            <a href="index.html" class="menu-link w-inline-block header-menu" data-page="index">
+              <h6>Home</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="about.html" class="menu-link w-inline-block header-menu">
+              <h6>About</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="our-focus.html" class="menu-link w-inline-block header-menu">
+              <h6>Our Focus</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="products.html" class="menu-link w-inline-block header-menu">
+              <h6>Our Products</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="faq.html" class="menu-link w-inline-block header-menu">
+              <h6>FAQ</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="contact.html" class="menu-link w-inline-block header-menu">
+              <h6>Contact Us</h6>
+            </a>
+          </div>
+          <div class="menu-footer">
+            <p class="smallest-paragraph grey-text">
+              <a href="tel:+2348098111113" class="menu-sub-link">0809-811-1113</a><br>
+              <a href="tel:+2348098111114" class="menu-sub-link">0809-811-1114</a><br>
+              <a href="tel:+2349030000395" class="menu-sub-link">0903-000-0395</a><br>
+              <!-- <a href="cdn-cgi/l/email-protection.html#a4cdcac2cbe4c5c3d6cbd4c5d6d0cac1d6d7cccdd4d78ac7cbc99bd7d1c6cec1c7d099e1cad5d1cdd6cdc1d7819694e2d6cbc9819694f3c1c6d7cdd0c1" class="menu-sub-link"><span class="__cf_email__" data-cfemail="5d34333b321d3c3a2f322d3c2f2933382f2e35342d2e733e3230">[email&#160;protected]</span></a> -->
+            </p>
+            <p class="smallest-paragraph grey-text top-padding">© <script data-cfasync="false"
+                src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+              <script type="text/javascript">
+                document.write(new Date().getFullYear());
+              </script> Patrick's Foods. All Rights Reserved
+            </p>
+          </div>
         </div>
-        <div class="menu-footer">
-          <p class="smallest-paragraph grey-text">
-            <a href="tel:+2348098111113" class="menu-sub-link">0809-811-1113</a><br>
-            <a href="tel:+2348098111114" class="menu-sub-link">0809-811-1114</a><br> 
-            <a href="tel:+2349030000395" class="menu-sub-link">0903-000-0395</a><br>
-            <a href="cdn-cgi/l/email-protection.html#a4cdcac2cbe4c5c3d6cbd4c5d6d0cac1d6d7cccdd4d78ac7cbc99bd7d1c6cec1c7d099e1cad5d1cdd6cdc1d7819694e2d6cbc9819694f3c1c6d7cdd0c1" class="menu-sub-link"><span class="__cf_email__" data-cfemail="5d34333b321d3c3a2f322d3c2f2933382f2e35342d2e733e3230">[email&#160;protected]</span></a></p>
-          <p class="smallest-paragraph grey-text top-padding">© <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript">document.write(new Date().getFullYear());</script> Farmforte. All Rights Reserved</p>
-        </div>
+        <div class="menu-lightbox" data-ix="close-menu"></div>
       </div>
-      <div class="menu-lightbox" data-ix="close-menu"></div>
-    </div>
     <div class="header-flex">
       <div class="menu-button" data-ix="open-menu">
         <div class="menu-line"></div>
