--- a/contact.html
+++ b/contact.html
@@ -205,11 +205,13 @@
   <a href="http://check-dc.com/" target="_blank" class="check-logo w-inline-block" title="Check DC : A Lagos based design agency focused on Brand Identity, Website design and Digital Marketing.">
   </a>
   <div>
-    <div class="white-text _50 copyright-text">
-      <div class="w-embed w-script">© Copyright
-        <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript">document.write(new Date().getFullYear());</script> Agropartnerships Technology Ltd. A Farmforte Subsidiary.</div>
-    </div>
-  </div>
+      <div class="white-text _50 copyright-text">
+          <div class="w-embed w-script">© Copyright
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script> Patrick's Food Ltd.</div>
+        </div>
+      </div>
 </div>
 <script>
   var footerTimeLink = document.getElementById("footer-time-link");
